// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.NavBar.Nav docKit example UU5.Bricks.NavBar.Nav example01 1`] = `
<nav
  className="color-schema-blue-rich color-schema-primary uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="aligned='right'"
      id="uuID2"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          id="uuID3"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID4"
          >
            <Icon
              icon="mdi-home"
              id="uuID5"
            />
            Home
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID6"
          >
            <Icon
              icon="mdi-newspaper"
              id="uuID7"
            />
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID8"
          >
            <Icon
              icon="mdi-account"
              id="uuID9"
            />
            MyProfile
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID10"
          >
            <Icon
              icon="mdi-logout"
              id="uuID11"
              style={
                Object {
                  "color": "red",
                }
              }
            />
            LogOut
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar.Nav docKit example UU5.Bricks.NavBar.Nav example02 1`] = `
<nav
  className="color-schema-blue-rich color-schema-primary uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="aligned='right'"
      id="uuID2"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          aligned="right"
          id="uuID3"
          key="nav-0"
          offset={70}
          smoothScroll={3000}
        >
          <nav-bar-nav-item
            id="uuID4"
          >
            <Icon
              icon="mdi-home"
              id="uuID5"
            />
            Home
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID6"
          >
            <Icon
              icon="mdi-newspaper"
              id="uuID7"
            />
            News
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID8"
          >
            <Icon
              icon="mdi-account"
              id="uuID9"
            />
            MyProfile
          </nav-bar-nav-item>
          <nav-bar-nav-item
            id="uuID10"
          >
            <Icon
              icon="mdi-logout"
              id="uuID11"
              style={
                Object {
                  "color": "red",
                }
              }
            />
            LogOut
          </nav-bar-nav-item>
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar.Nav props UU5.Bricks.NavBar.Nav - props.AllowTags 1`] = `
<nav
  className="color-schema-blue-rich color-schema-primary uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="aligned='right'"
      id="uuID2"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          allowTags={
            Array [
              "UU5.Example.MyCompButton",
            ]
          }
          id="uuID3"
          key="nav-0"
        >
          <nav-bar-nav-item
            id="uuID4"
          >
            <Icon
              icon="mdi-home"
              id="uuID5"
            />
            Home
          </nav-bar-nav-item>
          <UU5.Example.MyCompButton
            content="allowTags Content"
            id="allowID"
          />
        </nav-bar-nav>
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar.Nav props aligned="left" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props aligned="right" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-right"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props allowTags=undefined 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props checkGrammar=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props checkGrammar=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props checkHighlight=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props checkHighlight=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props checkSpaces=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props checkSpaces=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props className="my-classname" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav my-classname uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props className="test-classname" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav test-classname uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props content="This is Content from ContentMixin" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav props content=12345 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.NavBar.Nav props controlled=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props controlled=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props default props 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props disabled=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props disabled=false 3`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props disabled=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-common-disabled uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props disabled=true 3`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-common-disabled uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props dynamic=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props dynamic=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props fullTextSearchPriority=0 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu-fulltextsearch-0 uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props hidden=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props hidden=false 3`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props hidden=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-common-hidden uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props hidden=true 3`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-common-hidden uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props id="myId" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="myId"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props id="test-id" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="test-id"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props ignoreHTML=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props ignoreHTML=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props mainAttrs=undefined 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props name="myName" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props nestingLevel="box" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props nestingLevel="inline" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props noIndex=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props noIndex=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-noindex uu-fulltextsearch-0 uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props noPrint=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props noPrint=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props offset=70 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={70}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props pureRender=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props pureRender=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props selected=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props selected=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-common-selected uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props smoothScroll=3000 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={3000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props style="padding:8px; borderRadius: 2px" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props style={"backgroundColor":"red","color":"blue"} 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props style={"margin":8} 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props textCorrector=false 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props textCorrector=true 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title={null}
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;

exports[`UU5.Bricks.NavBar.Nav props tooltip="My Tooltip" 1`] = `
<ul
  className="uu5-bricks-nav-bar-nav nav navbar-nav uu5-bricks-nav-bar-nav-left"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <nav-bar-nav-item
    id="child02"
    key="child02"
    offset={null}
    smoothScroll={1000}
  >
    News
  </nav-bar-nav-item>
</ul>
`;
